--- a/401_450.md
+++ b/401_450.md
@@ -1613,7 +1613,387 @@ Therefore, Options A and C are the most appropriate solutions for creating a new
 
 </details>
 
+<details>
+  <summary>Question 441</summary>
 
+A company hosts a multi-tier web application on Amazon Linux Amazon EC2 instances behind an Application Load Balancer.
+The instances run in an Auto Scaling group across multiple Availability Zones.
+The company observes that the Auto Scaling group launches more On-Demand Instances when the application's end users access high volumes of static web content.
+The company wants to optimize cost.
+
+What should a solutions architect do to redesign the application MOST cost-effectively?
+
+-   [ ] A. Update the Auto Scaling group to use Reserved Instances instead of On-Demand Instances.
+-   [ ] B. Update the Auto Scaling group to scale by launching Spot Instances instead of On-Demand Instances.
+-   [ ] C. Create an Amazon CloudFront distribution to host the static web contents from an Amazon S3 bucket.
+-   [ ] D. Create an AWS Lambda function behind an Amazon API Gateway API to host the static website contents.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+-   [ ] C. Create an Amazon CloudFront distribution to host the static web contents from an Amazon S3 bucket.
+
+Why these are the correct answers:
+
+C. Create an Amazon CloudFront distribution to host the static web contents from an Amazon S3 bucket.
+
+-   [ ] Amazon CloudFront is a content delivery network (CDN) that efficiently serves static content, reducing the load on the EC2 instances and the need to scale them.
+-   [ ] S3 provides cost-effective storage for static content.
+
+Why are the other answers wrong?
+
+-   [ ] A. Reserved Instances reduce costs for long-running instances but do not address the issue of serving static content efficiently.
+-   [ ] B. Spot Instances can reduce costs but are not suitable for serving critical web application traffic due to potential interruptions.
+-   [ ] D. Using Lambda and API Gateway to serve static content is more complex and expensive than using CloudFront and S3.
+
+Therefore, Option C is the most cost-effective way to offload static content and reduce the scaling of On-Demand Instances.
+
+</details>
+<details>
+  <summary>Question 442</summary>
+
+A company stores several petabytes of data across multiple AWS accounts.
+The company uses AWS Lake Formation to manage its data lake.
+The company's data science team wants to securely share selective data from its accounts with the company's engineering team for analytical purposes.
+Which solution will meet these requirements with the LEAST operational overhead?
+
+-   [ ] A. Copy the required data to a common account.
+    Create an IAM access role in that account.
+    Grant access by specifying a permission policy that includes users from the engineering team accounts as trusted entities.
+-   [ ] B. Use the Lake Formation permissions Grant command in each account where the data is stored to allow the required engineering team users to access the data.
+-   [ ] C. Use AWS Data Exchange to privately publish the required data to the required engineering team accounts.
+-   [ ] D. Use Lake Formation tag-based access control to authorize and grant cross-account permissions for the required data to the engineering team accounts.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+-   [ ] D. Use Lake Formation tag-based access control to authorize and grant cross-account permissions for the required data to the engineering team accounts.
+
+Why these are the correct answers:
+
+D. Use Lake Formation tag-based access control to authorize and grant cross-account permissions for the required data to the engineering team accounts.
+
+-   [ ] Lake Formation tag-based access control simplifies the management of permissions in a data lake environment.
+-   [ ] It allows for fine-grained control over data access across accounts with minimal operational overhead.
+
+Why are the other answers wrong?
+
+-   [ ] A. Copying data to a common account introduces data duplication and increases storage costs and management overhead.
+    Managing IAM roles across accounts is also complex.
+-   [ ] B. Using the Lake Formation Grant command in each account is more complex and time-consuming than using tag-based access control.
+-   [ ] C. AWS Data Exchange is designed for sharing data with external parties, not for internal data sharing within an organization.
+    It also adds unnecessary cost and complexity.
+
+Therefore, Option D is the most efficient and least operationally intensive solution for sharing data within the organization's data lake.
+
+</details>
+<details>
+  <summary>Question 443</summary>
+
+A company wants to host a scalable web application on AWS.
+The application will be accessed by users from different geographic regions of the world.
+Application users will be able to download and upload unique data up to gigabytes in size.
+The development team wants a cost-effective solution to minimize upload and download latency and maximize performance.
+What should a solutions architect do to accomplish this?
+
+-   [ ] A. Use Amazon S3 with Transfer Acceleration to host the application.
+-   [ ] B. Use Amazon S3 with CacheControl headers to host the application.
+-   [ ] C. Use Amazon EC2 with Auto Scaling and Amazon CloudFront to host the application.
+-   [ ] D. Use Amazon EC2 with Auto Scaling and Amazon ElastiCache to host the application.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+-   [ ] A. Use Amazon S3 with Transfer Acceleration to host the application.
+
+Why these are the correct answers:
+
+A. Use Amazon S3 with Transfer Acceleration to host the application.
+
+-   [ ] Amazon S3 Transfer Acceleration optimizes data transfers to and from S3 over long distances, reducing latency.
+-   [ ] S3 provides scalability and cost-effectiveness for storing and retrieving large files.
+
+Why are the other answers wrong?
+
+-   [ ] B. CacheControl headers in S3 are used for caching content in browsers and CDNs but do not accelerate the actual upload and download process.
+-   [ ] C. While EC2 with Auto Scaling and CloudFront can host a web application, it is more complex and expensive than using S3 with Transfer Acceleration for large file transfers.
+-   [ ] D. ElastiCache is an in-memory caching service and is not designed for storing and transferring large files.
+
+Therefore, Option A is the most suitable solution for minimizing latency and maximizing performance for large file transfers.
+
+</details>
+<details>
+  <summary>Question 444</summary>
+
+A company has hired a solutions architect to design a reliable architecture for its application.
+The application consists of one Amazon RDS DB instance and two manually provisioned Amazon EC2 instances that run web servers.
+The EC2 instances are located in a single Availability Zone.
+An employee recently deleted the DB instance, and the application was unavailable for 24 hours as a result.
+The company is concerned with the overall reliability of its environment.
+What should the solutions architect do to maximize reliability of the application's infrastructure?
+
+-   [ ] A. Delete one EC2 instance and enable termination protection on the other EC2 instance.
+    Update the DB instance to be Multi-AZ, and enable deletion protection.
+-   [ ] B. Update the DB instance to be Multi-AZ, and enable deletion protection.
+    Place the EC2 instances behind an Application Load Balancer, and run them in an EC2 Auto Scaling group across multiple Availability Zones.
+-   [ ] C. Create an additional DB instance along with an Amazon API Gateway and an AWS Lambda function.
+    Configure the application to invoke the Lambda function through API Gateway.
+    Have the Lambda function write the data to the two DB instances.
+-   [ ] D. Place the EC2 instances in an EC2 Auto Scaling group that has multiple subnets located in multiple Availability Zones.
+    Use Spot Instances instead of On-Demand Instances.
+    Set up Amazon CloudWatch alarms to monitor the health of the instances Update the DB instance to be Multi-AZ, and enable deletion protection.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+-   [ ] B. Update the DB instance to be Multi-AZ, and enable deletion protection.
+    Place the EC2 instances behind an Application Load Balancer, and run them in an EC2 Auto Scaling group across multiple Availability Zones.
+
+Why these are the correct answers:
+
+B. Update the DB instance to be Multi-AZ, and enable deletion protection.
+Place the EC2 instances behind an Application Load Balancer, and run them in an EC2 Auto Scaling group across multiple Availability Zones.
+
+-   [ ] Multi-AZ RDS provides high availability for the database.
+-   [ ] Enabling deletion protection prevents accidental deletion of the DB instance.
+-   [ ] Auto Scaling groups and Application Load Balancers distribute traffic and ensure EC2 instances are resilient to failures across Availability Zones.
+
+Why are the other answers wrong?
+
+-   [ ] A. Deleting an EC2 instance reduces availability.
+    Termination protection only prevents termination, not other failures.
+-   [ ] C. Adding API Gateway and Lambda functions adds complexity without directly addressing the reliability of the EC2 instances or the database.
+-   [ ] D. Spot Instances can be interrupted, reducing reliability.
+    While Auto Scaling and Multi-AZ improve reliability, using Spot Instances undermines it.
+
+Therefore, Option B provides the most comprehensive solution for maximizing application reliability.
+
+</details>
+<details>
+  <summary>Question 445</summary>
+
+A company is storing 700 terabytes of data on a large network-attached storage (NAS) system in its corporate data center.
+The company has a hybrid environment with a 10 Gbps AWS Direct Connect connection.
+After an audit from a regulator, the company has 90 days to move the data to the cloud.
+The company needs to move the data efficiently and without disruption.
+The company still needs to be able to access and update the data during the transfer window.
+Which solution will meet these requirements?
+
+-   [ ] A. Create an AWS DataSync agent in the corporate data center.
+    Create a data transfer task Start the transfer to an Amazon S3 bucket.
+-   [ ] B. Back up the data to AWS Snowball Edge Storage Optimized devices.
+    Ship the devices to an AWS data center.
+    Mount a target Amazon S3 bucket on the on-premises file system.
+-   [ ] C. Use rsync to copy the data directly from local storage to a designated Amazon S3 bucket over the Direct Connect connection.
+-   [ ] D. Back up the data on tapes.
+    Ship the tapes to an AWS data center.
+    Mount a target Amazon S3 bucket on the on-premises file system.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+-   [ ] A. Create an AWS DataSync agent in the corporate data center.
+    Create a data transfer task Start the transfer to an Amazon S3 bucket.
+
+Why these are the correct answers:
+
+A. Create an AWS DataSync agent in the corporate data center.
+Create a data transfer task Start the transfer to an Amazon S3 bucket.
+
+-   [ ] AWS DataSync is designed for efficient and secure online data transfer.
+-   [ ] It can transfer data while it is being accessed and updated, minimizing disruption.
+-   [ ] Using Direct Connect optimizes the transfer speed.
+
+Why are the other answers wrong?
+
+-   [ ] B. Snowball Edge is suitable for large data transfers but involves physical shipping, which is disruptive and does not allow for continuous access and updates during the transfer.
+-   [ ] C. While rsync can transfer data, it is not as efficient or optimized for large-scale transfers as DataSync, and it may not handle concurrent access and updates as gracefully.
+-   [ ] D. Transferring data via tapes is slow, disruptive, and does not allow for online access and updates.
+
+Therefore, Option A is the most appropriate solution for migrating the data efficiently and without disruption.
+
+</details>
+<details>
+  <summary>Question 446</summary>
+
+A company stores data in PDF format in an Amazon S3 bucket.
+The company must follow a legal requirement to retain all new and existing data in Amazon S3 for 7 years.
+Which solution will meet these requirements with the LEAST operational overhead?
+
+-   [ ] A. Turn on the S3 Versioning feature for the S3 bucket.
+    Configure S3 Lifecycle to delete the data after 7 years.
+    Configure multi-factor authentication (MFA) delete for all S3 objects.
+-   [ ] B. Turn on S3 Object Lock with governance retention mode for the S3 bucket.
+    Set the retention period to expire after 7 years.
+    Recopy all existing objects to bring the existing data into compliance.
+-   [ ] C. Turn on S3 Object Lock with compliance retention mode for the S3 bucket.
+    Set the retention period to expire after 7 years.
+    Recopy all existing objects to bring the existing data into compliance.
+-   [ ] D. Turn on S3 Object Lock with compliance retention mode for the S3 bucket.
+    Set the retention period to expire after 7 years.
+    Use S3 Batch Operations to bring the existing data into compliance.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+-   [ ] D. Turn on S3 Object Lock with compliance retention mode for the S3 bucket.
+    Set the retention period to expire after 7 years.
+    Use S3 Batch Operations to bring the existing data into compliance.
+
+Why these are the correct answers:
+
+D. Turn on S3 Object Lock with compliance retention mode for the S3 bucket.
+Set the retention period to expire after 7 years.
+Use S3 Batch Operations to bring the existing data into compliance.
+
+-   [ ] S3 Object Lock with compliance mode ensures that objects cannot be deleted or overwritten for the specified retention period.
+-   [ ] S3 Batch Operations allows for efficient application of Object Lock to existing objects, minimizing operational overhead.
+
+Why are the other answers wrong?
+
+-   [ ] A. S3 Versioning protects against accidental deletion but does not prevent intentional deletion by authorized users.
+    MFA Delete adds an extra layer of security but does not guarantee retention.
+-   [ ] B. Governance retention mode allows privileged users to delete objects, which does not meet the strict compliance requirement.
+    Recopying all objects adds operational overhead.
+-   [ ] C. While compliance mode is correct, using S3 Batch Operations is more efficient than recopying all objects.
+
+Therefore, Option D provides the most compliant and operationally efficient solution for retaining data for 7 years.
+
+</details>
+<details>
+  <summary>Question 447</summary>
+
+A company has a stateless web application that runs on AWS Lambda functions that are invoked by Amazon API Gateway.
+The company wants to deploy the application across multiple AWS Regions to provide Regional failover capabilities.
+What should a solutions architect do to route traffic to multiple Regions?
+
+-   [ ] A. Create Amazon Route 53 health checks for each Region.
+    Use an active-active failover configuration.
+-   [ ] B. Create an Amazon CloudFront distribution with an origin for each Region.
+    Use CloudFront health checks to route traffic.
+-   [ ] C. Create a transit gateway.
+    Attach the transit gateway to the API Gateway endpoint in each Region.
+    Configure the transit gateway to route requests.
+-   [ ] D. Create an Application Load Balancer in the primary Region.
+    Set the target group to point to the API Gateway endpoint hostnames in each Region.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+-   [ ] A. Create Amazon Route 53 health checks for each Region.
+    Use an active-active failover configuration.
+
+Why these are the correct answers:
+
+A. Create Amazon Route 53 health checks for each Region.
+Use an active-active failover configuration.
+
+-   [ ] Amazon Route 53 allows for DNS-based routing of traffic to different Regions.
+-   [ ] Health checks ensure that traffic is routed only to healthy Regions.
+-   [ ] An active-active failover configuration provides high availability and low latency by distributing traffic across multiple Regions.
+
+Why are the other answers wrong?
+
+-   [ ] B. CloudFront is primarily for caching content and is not ideal for routing all application traffic based on Regional health.
+-   [ ] C. Transit Gateway connects VPCs and on-premises networks, not API Gateway endpoints across Regions.
+-   [ ] D. Application Load Balancers cannot route traffic to API Gateway endpoints in different Regions as target groups.
+
+Therefore, Option A is the most appropriate solution for routing traffic to multiple Regions for failover.
+
+</details>
+<details>
+  <summary>Question 448</summary>
+
+A company has two VPCs named Management and Production.
+The Management VPC uses VPNs through a customer gateway to connect to a single device in the data center.
+The Production VPC uses a virtual private gateway with two attached AWS Direct Connect connections.
+The Management and Production VPCs both use a single VPC peering connection to allow communication between the applications.
+What should a solutions architect do to mitigate any single point of failure in this architecture?
+
+-   [ ] A. Add a set of VPNs between the Management and Production VPCs.
+-   [ ] B. Add a second virtual private gateway and attach it to the Management VPC.
+-   [ ] C. Add a second set of VPNs to the Management VPC from a second customer gateway device.
+-   [ ] D. Add a second VPC peering connection between the Management VPC and the Production VPC.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+-   [ ] C. Add a second set of VPNs to the Management VPC from a second customer gateway device.
+
+Why these are the correct answers:
+
+C. Add a second set of VPNs to the Management VPC from a second customer gateway device.
+
+-   [ ] The current architecture has a single point of failure in the connection between the Management VPC and the data center.
+-   [ ] Adding a second set of VPNs from a second customer gateway device provides redundancy and mitigates this risk.
+
+Why are the other answers wrong?
+
+-   [ ] A. Adding VPNs between the Management and Production VPCs does not address the single point of failure in the connection to the data center.
+-   [ ] B. Adding a second virtual private gateway to the Management VPC provides redundancy on the AWS side but not for the connection to the data center.
+-   [ ] D. Adding a second VPC peering connection only provides redundancy for the connection between the VPCs, not for the connection to the data center.
+
+Therefore, Option C is the most effective solution to eliminate the single point of failure.
+
+</details>
+<details>
+  <summary>Question 449</summary>
+
+A company runs its application on an Oracle database.
+The company plans to quickly migrate to AWS because of limited resources for the database, backup administration, and data center maintenance.
+The application uses third-party database features that require privileged access.
+Which solution will help the company migrate the database to AWS MOST cost-effectively?
+
+-   [ ] A. Migrate the database to Amazon RDS for Oracle.
+    Replace third-party features with cloud services.
+-   [ ] B. Migrate the database to Amazon RDS Custom for Oracle.
+    Customize the database settings to support third-party features.
+-   [ ] C. Migrate the database to an Amazon EC2 Amazon Machine Image (AMI) for Oracle.
+    Customize the database settings to support third-party features.
+-   [ ] D. Migrate the database to Amazon RDS for PostgreSQL by rewriting the application code to remove dependency on Oracle APEX.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+-   [ ] B. Migrate the database to Amazon RDS Custom for Oracle.
+    Customize the database settings to support third-party features.
+
+Why these are the correct answers:
+
+B. Migrate the database to Amazon RDS Custom for Oracle.
+Customize the database settings to support third-party features.
+
+-   [ ] Amazon RDS Custom for Oracle allows for customization of the underlying operating system and database environment, supporting applications that require privileged access.
+-   [ ] It provides a managed database service, reducing operational overhead.
+
+Why are the other answers wrong?
+
+-   [ ] A. Amazon RDS for Oracle does not allow for the necessary level of customization for applications that require privileged access to the database.
+    Replacing third-party features adds complexity and cost.
+-   [ ] C. Migrating to EC2 provides flexibility but increases operational overhead, as the company is responsible for managing the database and infrastructure.
+-   [ ] D. Migrating to PostgreSQL requires significant application code changes, which is time-consuming and costly.
+
+Therefore, Option B is the most cost-effective solution for migrating the Oracle database with privileged access requirements.
+
+</details>
 
 
 
