--- a/401_450.md
+++ b/401_450.md
@@ -1995,7 +1995,72 @@ Therefore, Option B is the most cost-effective solution for migrating the Oracle
 
 </details>
 
+<details>
+  <summary>Question 450</summary>
 
+A company has a three-tier web application that is in a single server.
+The company wants to migrate the application to the AWS Cloud.
+The company also wants the application to align with the AWS Well-Architected Framework and to be consistent with AWS recommended best practices for security, scalability, and resiliency.
+Which combination of solutions will meet these requirements? (Choose three.)
+
+-   [ ] A. Create a VPC across two Availability Zones with the application's existing architecture.
+    Host the application with existing architecture on an Amazon EC2 instance in a private subnet in each Availability Zone with EC2 Auto Scaling groups.
+    Secure the EC2 instance with security groups and network access control lists (network ACLs).
+-   [ ] B. Set up security groups and network access control lists (network ACLs) to control access to the database layer.
+    Set up a single Amazon RDS database in a private subnet.
+-   [ ] C. Create a VPC across two Availability Zones.
+    Refactor the application to host the web tier, application tier, and database tier.
+    Host each tier on its own private subnet with Auto Scaling groups for the web tier and application tier.
+-   [ ] D. Use a single Amazon RDS database.
+    Allow database access only from the application tier security group.
+-   [ ] E. Use Elastic Load Balancers in front of the web tier.
+    Control access by using security groups containing references to each layer's security groups.
+-   [ ] F. Use an Amazon RDS database Multi-AZ cluster deployment in private subnets.
+    Allow database access only from application tier security groups.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+-   [ ] C. Create a VPC across two Availability Zones.
+    Refactor the application to host the web tier, application tier, and database tier.
+    Host each tier on its own private subnet with Auto Scaling groups for the web tier and application tier.
+-   [ ] E. Use Elastic Load Balancers in front of the web tier.
+    Control access by using security groups containing references to each layer's security groups.
+-   [ ] F. Use an Amazon RDS database Multi-AZ cluster deployment in private subnets.
+    Allow database access only from application tier security groups.
+
+Why these are the correct answers:
+
+C. Create a VPC across two Availability Zones.
+Refactor the application to host the web tier, application tier, and database tier.
+Host each tier on its own private subnet with Auto Scaling groups for the web tier and application tier.
+
+-   [ ] Creating a VPC across multiple Availability Zones enhances availability and resiliency.
+-   [ ] Refactoring into tiers and hosting each in its own subnet improves security and scalability.
+-   [ ] Auto Scaling groups ensure scalability and fault tolerance for the web and application tiers.
+
+E. Use Elastic Load Balancers in front of the web tier.
+Control access by using security groups containing references to each layer's security groups.
+
+-   [ ] Elastic Load Balancers distribute traffic and improve availability.
+-   [ ] Security groups provide network security by controlling traffic between tiers.
+
+F. Use an Amazon RDS database Multi-AZ cluster deployment in private subnets.
+Allow database access only from application tier security groups.
+
+-   [ ] Multi-AZ RDS enhances database availability.
+-   [ ] Private subnets and security groups secure the database layer.
+
+Why are the other answers wrong?
+
+-   [ ] A. Hosting the application with its existing architecture on a single EC2 instance in each AZ does not fully leverage the benefits of a tiered architecture for scalability and security.
+-   [ ] B and D. Using a single RDS database, even in a private subnet, introduces a single point of failure.
+
+Therefore, Options C, E, and F provide the most robust, scalable, and secure solution, aligning with AWS best practices.
+
+</details>
 
 
 
