--- a/451_500.md
+++ b/451_500.md
@@ -1196,7 +1196,134 @@ Therefore, Option D is the correct and most secure solution.
 
 </details>
 
+<details>
+  <summary>Question 478</summary>
 
+A law firm needs to share information with the public.
+The information includes hundreds of files that must be publicly readable.
+Modifications or deletions of the files by anyone before a designated future date are prohibited.
+Which solution will meet these requirements in the MOST secure way?
+
+-   [ ] A. Upload all files to an Amazon S3 bucket that is configured for static website hosting.
+    Grant read-only IAM permissions to any AWS principals that access the S3 bucket until the designated date.
+-   [ ] B. Create a new Amazon S3 bucket with S3 Versioning enabled.
+    Use S3 Object Lock with a retention period in accordance with the designated date.
+    Configure the S3 bucket for static website hosting.
+    Set an S3 bucket policy to allow read-only access to the objects.
+-   [ ] C. Create a new Amazon S3 bucket with S3 Versioning enabled.
+    Configure an event trigger to run an AWS Lambda function in case of object modification or deletion.
+    Configure the Lambda function to replace the objects with the original versions from a private S3 bucket.
+-   [ ] D. Upload all files to an Amazon S3 bucket that is configured for static website hosting.
+    Select the folder that contains the files.
+    Use S3 Object Lock with a retention period in accordance with the designated date.
+    Grant read-only IAM permissions to any AWS principals that access the S3 bucket.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+-   [ ] B. Create a new Amazon S3 bucket with S3 Versioning enabled.
+    Use S3 Object Lock with a retention period in accordance with the designated date.
+    Configure the S3 bucket for static website hosting.
+    Set an S3 bucket policy to allow read-only access to the objects.
+
+Why these are the correct answers:
+
+B. Create a new Amazon S3 bucket with S3 Versioning enabled.
+Use S3 Object Lock with a retention period in accordance with the designated date.
+Configure the S3 bucket for static website hosting.
+Set an S3 bucket policy to allow read-only access to the objects.
+
+-   [ ] S3 Object Lock prevents objects from being deleted or modified for a specified retention period.
+-   [ ] S3 Versioning protects against accidental deletions.
+-   [ ] Static website hosting allows public access to the files.
+-   [ ] An S3 bucket policy grants read-only access.
+
+Why are the other answers wrong?
+
+-   [ ] A. IAM permissions do not prevent authorized users from modifying or deleting objects.
+-   [ ] C. Using Lambda functions to restore objects is complex and less secure than S3 Object Lock.
+-   [ ] D. S3 Object Lock cannot be applied to a folder in S3.
+
+Therefore, Option B is the most secure and efficient solution.
+
+</details>
+<details>
+  <summary>Question 479</summary>
+
+A company is making a prototype of the infrastructure for its new website by manually provisioning the necessary infrastructure.
+This infrastructure includes an Auto Scaling group, an Application Load Balancer and an Amazon RDS database.
+After the configuration has been thoroughly validated, the company wants the capability to immediately deploy the infrastructure for development and production use in two Availability Zones in an automated fashion.
+What should a solutions architect recommend to meet these requirements?
+
+-   [ ] A. Use AWS Systems Manager to replicate and provision the prototype infrastructure in two Availability Zones
+-   [ ] B. Define the infrastructure as a template by using the prototype infrastructure as a guide.
+    Deploy the infrastructure with AWS CloudFormation.
+-   [ ] C. Use AWS Config to record the inventory of resources that are used in the prototype infrastructure.
+    Use AWS Config to deploy the prototype infrastructure into two Availability Zones.
+-   [ ] D. Use AWS Elastic Beanstalk and configure it to use an automated reference to the prototype infrastructure to automatically deploy new environments in two Availability Zones.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+-   [ ] B. Define the infrastructure as a template by using the prototype infrastructure as a guide.
+    Deploy the infrastructure with AWS CloudFormation.
+
+Why these are the correct answers:
+
+B. Define the infrastructure as a template by using the prototype infrastructure as a guide.
+Deploy the infrastructure with AWS CloudFormation.
+
+-   [ ] AWS CloudFormation allows you to define infrastructure as code, enabling automated and repeatable deployments.
+-   [ ] It ensures consistency and reduces manual errors.
+
+Why are the other answers wrong?
+
+-   [ ] A. AWS Systems Manager is for managing EC2 instances, not for provisioning infrastructure.
+-   [ ] C. AWS Config records configuration changes but does not deploy infrastructure.
+-   [ ] D. Elastic Beanstalk is for deploying applications, not for defining and deploying infrastructure components like Auto Scaling groups and load balancers.
+
+Therefore, Option B is the most appropriate solution.
+
+</details>
+<details>
+  <summary>Question 480</summary>
+
+A business application is hosted on Amazon EC2 and uses Amazon S3 for encrypted object storage.
+The chief information security officer has directed that no application traffic between the two services should traverse the public internet.
+Which capability should the solutions architect use to meet the compliance requirements?
+
+-   [ ] A. AWS Key Management Service (AWS KMS)
+-   [ ] B. VPC endpoint
+-   [ ] C. Private subnet
+-   [ ] D. Virtual private gateway
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+-   [ ] B. VPC endpoint
+
+Why these are the correct answers:
+
+B. VPC endpoint
+
+-   [ ] VPC endpoints enable private connections to AWS services like S3 without using the internet.
+-   [ ] They keep traffic within the AWS network.
+
+Why are the other answers wrong?
+
+-   [ ] A. AWS KMS is for managing encryption keys, not for network traffic routing.
+-   [ ] C. Private subnets provide network isolation within a VPC but do not prevent traffic from leaving the VPC to access S3.
+-   [ ] D. A virtual private gateway is for connecting to on-premises networks, not for S3 access.
+
+Therefore, Option B is the correct solution.
+
+</details>
 
 
 
